--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/js-yaml": "^4.0.9",
     "typescript": "^5",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.17",
