--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/js-yaml": "^4.0.9",
+    "@types/gray-matter": "^4.0.3",
     "typescript": "^5",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.17",
